<resources>
    <string name="app_name">Groomers Vendor</string>
    <string name="title_activity_forget_pass">Forget_pass</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password</string>
    <string name="are_you_a_new_user">Are you a new user?</string>
    <string name="register">Register</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="username">Username</string>
    <string name="add_1">Add 1</string>
    <string name="add_2">Add 2</string>
    <string name="city">City</string>
    <string name="pinCode">Pin code</string>
    <string name="welcome_new_user">Welcome New User</string>
    <string name="you_want_to_register_as_vendor">You want to Register as Vendor</string>
    <string name="sub_user">Sub user</string>
    <string name="add">Add +</string>
    <string name="continue1">Continue</string>
    <string name="business_name">Business name</string>
    <string name="your_name">Your Name</string>
    <string name="phone_number">Phone number</string>
    <string name="about_you">About you</string>
    <string name="tell_us_more_about_yourself_and_your_business">Tell us more about yourself and your business.</string>
    <string name="welcome_new_vendor">Welcome new vendor</string>
    <string name="url_link">URL link</string>
    <string name="additional_information">Additional information</string>
    <string name="upload_your_photo">Upload Your Photo</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="item_price">Price:-</string>
    <string name="_100">100</string>
    <string name="quantity">Quantity:-</string>
    <string name="_2">2</string>
    <string name="item_time">Time:-</string>
    <string name="_10pm">10pm</string>
    <string name="item_date">Date:-</string>
    <string name="_10_jun">10 jun</string>
    <string name="submit">Submit</string>
    <string name="orders">Orders</string>
    <string name="check_your_order_status_track_returns_cancel_etc">Check your order status (track, returns, cancel, etc)</string>
    <string name="addresses">Addresses</string>
    <string name="manage_your_saved_addresses">Manage your saved addresses</string>
    <string name="order_icon">Order Icon</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invite_friends_get_discounts">Invite friends get discounts</string>
    <string name="hello_user">Hello user!</string>
    <string name="settings">Settings</string>
    <string name="edit_update_your_account_settings">Edit/update your account settings</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="faq_contacts_us">FAQ / Contacts Us</string>
    <string name="home_type">Home Type</string>
    <string name="home_details">Home Details</string>
    <string name="enter_deatils">Enter Deatils</string>
    <string name="enter_description">Enter Description</string>
    <string name="request_for_home">Request for Home</string>
    <string name="login_in">Login In</string>
    <string name="please_fill_below_details_to_continue">Please fill below details to continue</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="log_in">Log In</string>
    <string name="new_user">New User?</string>
    <string name="create_account">Create Account</string>
    <string name="home">Home</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="reset">Reset</string>
    <string name="signup">Signup</string>
    <string name="enter_name">Enter Name</string>
    <string name="surname">Surname</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="street_address_line">Street Address line</string>
    <string name="landmark">Landmark</string>
    <string name="zip_code">Zip Code</string>
    <string name="register_new_user">Register New User</string>
    <string name="add_member">Add Member</string>
    <string name="my_profile">My Profile</string>
    <string name="add_post">Add Service</string>
    <string name="search">Search by Customer Name</string>
    <string name="dashboard">Dashboard</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="order_detail">Order Detail</string>
    <string name="no_data_found">No Data Found</string>
    <string name="order">Order</string>
    <string name="_00">00</string>
    <string name="service_date">Service Date:</string>
    <string name="_00_00_0000">00 00 0000</string>
    <string name="order_details">Order Details</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="na">Na</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="vendor">Vendor</string>
    <string name="contact_info">Contact Info</string>
    <string name="at">\@</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="_9887667567">9887667567</string>
    <string name="chnage_password">Chnage Password</string>
    <string name="post_service">Post Service</string>
    <string name="category">Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="order_list">Order List</string>
    <string name="back_arrow">Back arrow</string>
    <string name="sunday">Sunday</string>
    <string name="closed">Closed</string>
    <string name="monday">Monday</string>
    <string name="_10_00_am_7_00_pm">10:00 AM - 7:00 PM</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="order_payment">Order Payment</string>
    <string name="payment_type">Payment Type</string>
    <string name="_7438648721">7438648721</string>
    <string name="select_profile_picture">Select Profile Picture</string>
    <string name="choose_sub_user">Choose Sub User</string>
    <string name="_10_00_pm">10:00 PM</string>
    <string name="_09_00_pm">09:00 PM</string>
    <string name="_05_10_pm">05:10 PM</string>
    <string name="_01_20_pm">01:20 PM</string>
    <string name="_10_30_am">10:30 AM</string>
    <string name="_09_30_am">09:30 AM</string>
    <string name="_11_03_2024">11/03/2024</string>
    <string name="address_350">Address · ₹350</string>
    <string name="_31_mins_6_5_km">31 mins · 6.5 km</string>
    <string name="_4_0">4.0★</string>
    <string name="start_adding_services">Start Adding Services</string>
    <string name="add_at_least_one_service_now_later_you_can_add_more_edit_details_and_group_services_into_categories">Add at least one service now. Later you can add more, edit details, and group services into categories.</string>
    <string name="remove_service">Remove Service</string>
    <string name="female_haircut">Female Haircut</string>
    <string name="_45min">45min</string>
    <string name="edit_service">Edit Service</string>
    <string name="hair_extensions">Hair Extensions</string>
    <string name="_2h">2h</string>
    <string name="_35_00">$35.00</string>
    <string name="add_service">Add Service</string>
    <string name="category_name_f">Category Name F</string>
    <string name="category_name_e">Category Name E</string>
    <string name="category_name_d">Category Name D</string>
    <string name="category_name_c">Category Name C</string>
    <string name="category_name_b">Category Name B</string>
    <string name="category_name_a">Category Name A</string>
    <string name="choose_a_business_category_that_will_help_your_customers_find_you_when_they_re_browsing_for_services">Choose a business category that will help your customers find you when they\'re browsing for services.</string>
    <string name="tyga_tell_us_about_your_business">Tyga, tell us about your business</string>
    <string name="your_business_hours">Your Business Hours</string>
    <string name="when_can_clients_book_with_you">When can clients book with you?</string>
    <string name="what_s_your_team_size">What’s your team size?</string>
    <string name="just_me">Just me</string>
    <string name="_2_3_staff_members">2-3 staff members</string>
    <string name="_4_6_staff_members">4-6 staff members</string>
    <string name="more_than_6_staff_members">More than 6 staff members</string>
    <string name="service_type">Service type</string>
    <string name="address">Address</string>
    <string name="slot_time">Slot time</string>
    <string name="select_date">Select date</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_groomers_nfor_professionals">Welcome to Groomers\nFor professionals</string>
    <string name="all_in_one_solution">All in One solution</string>
    <string name="to_manage_bookings_do_marketing_and_to_grow_your_business">to manage bookings, do Marketing and to grow your business.</string>
    <string name="select_the_best_of_your_knowledge">Select the best of your knowledge</string>
    <string name="choose_a_language">Choose A Language</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="what_s_your_business">What\'s your business?</string>
    <string name="select_the_category_you_feel_best_represents_your_business">Select the category you feel best represents your business.</string>
    <string name="confirm_your_address">Confirm your address</string>
    <string name="where_can_clients_find_you">Where can clients find you?</string>
    <string name="marketing">Marketing</string>
    <string name="help_center">Help center</string>
    <string name="add_details_to_establish_your_brand_adjust_location_settings_and_create_custom_forms_for_customer">Add details to establish your brand,adjust location settings,and create custom forms for customer</string>
    <string name="business_details">Business details</string>
    <string name="edit_your_opening_and_business_hours_manage_time_off_and_schedule_working_hours_for_staffmembers">Edit your opening and business hours,manage time off and schedule working hours for staff members</string>
    <string name="schedule_management">Schedule management</string>
    <string name="all_payment_settings_in_one_place">All payment settings in one place</string>
    <string name="payment_and_checkout">Payment and Checkout</string>
    <string name="edit">Edit</string>
    <string name="view_and_analytics">View and Analytics</string>
    <string name="already_added">Already added</string>
    <string name="query">Query</string>
</resources>